# django-2024-new

./: .env  .gitignore  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparkmodel_user.py
apps/cars/: choices.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_body_type.py  0003_carmodel_engine.py  0004_carmodel_created_at_carmodel_updated_at.py  0005_remove_carmodel_body_type_remove_carmodel_engine.py  0006_carmodel_auto_park.py  0007_carmodel_body_type_alter_carmodel_brand_and_more.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
cars/: models.py  views.py
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  rest_conf.py
core/: pagination.py
